[package]

name = "spin"
version = "0.4.5"
authors = [ "Mathijs van de Nes <git@mathijs.vd-nes.nl>",
            "John Ericson <John_Ericson@Yahoo.com>" ]
license = "MIT"
repository = "https://github.com/mvdnes/spin-rs.git"
documentation = "https://mvdnes.github.io/rust-docs/spin-rs/spin/index.html"
keywords = ["spinlock", "mutex", "rwlock"]
description = """
Synchronization primitives based on spinning.
They may contain data,
They are usable without `std`
and static initializers are available.
"""

[features]
asm = []
core_intrinsics = []
const_fn = []
once = ["const_fn"]
unstable = ["asm", "core_intrinsics", "const_fn", "once"]
default = ["unstable"]

[target.thumbv6m-none-eabi.dependencies]
cm0_atomic = { git = "https://github.com/AltOS-Rust/altos-rust/tree/master/altos-rust/altos-core/libs/cm0_atomic" }
